--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,13 +5,19 @@ server.port=${PORT:8080}
 
 # Launch the default browser when starting the application in development mode
 vaadin.launch-browser=true
+# To improve the performance during development.
+# For more information https://vaadin.com/docs/latest/integrations/spring/configuration#special-configuration-parameters
+vaadin.allowed-packages=com.vaadin,org.vaadin,ch.martinelli.oss
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 
-# To improve the performance during development.
-# For more information https://vaadin.com/docs/latest/integrations/spring/configuration#special-configuration-parameters
-vaadin.allowed-packages=com.vaadin,org.vaadin,ch.martinelli.oss
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 jwt.auth.secret=kLzSHBsrDny8EIrsdbX7M0NKcdVD1IjXPPAk9yp5xb8=
