Update banner formatting and link app version to project version

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=registration
-spring.application.version=
+spring.application.version=@project.version@
 
 server.port=${PORT:8080}
 
