--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,5 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 jwt.auth.secret=kLzSHBsrDny8EIrsdbX7M0NKcdVD1IjXPPAk9yp5xb8=
+
+public.address=https://tve-registration.fly.dev
