--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,4 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 jwt.auth.secret=kLzSHBsrDny8EIrsdbX7M0NKcdVD1IjXPPAk9yp5xb8=
 
 public.address=https://tve-registration.fly.dev
+registration.title=Jugi TV Erlach - Anmeldung
