Update date picker label and translation keys to use 'open until' consistently

--- a/src/main/resources/vaadin-i18n/translations.properties
+++ b/src/main/resources/vaadin-i18n/translations.properties
@@ -25,7 +25,7 @@ location=Location
 mailing.created=Mailing created
 mailing=Mailing
 open.from=Open from
-open.to=Open to
+open.until=Open to
 participates=participates
 persons=Persons
 registration.for=Registration for
