Add email text support for registration, improve translations, and enhance UI functionality

--- a/src/main/resources/vaadin-i18n/translations.properties
+++ b/src/main/resources/vaadin-i18n/translations.properties
@@ -3,6 +3,9 @@ application.title=Registration Tool
 back=Back
 cancel=Cancel
 create.mailing=Create mailing
+create.mailing.confirm=Do you want to create the mailing?
+create.mailing.error=Mailing exists
+create.mailing.success=Mailing created
 date.of.birth=Date of birth
 delete.event.error=The event is still in use and cannot be deleted
 delete.event.question=Do you really want to delete the event?
@@ -14,6 +17,8 @@ delete.person.success=The person has been deleted
 delete.person=Delete person
 description=Description
 email=Email
+email.text=Email text (don't forget %s)
+email.text.placeholder=Enter email text here. Must contain %s for the link to the registration form.
 emails.sent=Emails sent
 event.registrations=Registration
 events=Events
@@ -31,7 +36,10 @@ persons=Persons
 registration.for=Registration for
 registration.form=Registration form
 registrations=Registrations
+register=Register
+registration.success=Thanks for registering!
 remarks=Remarks
+remarks.placeholder=Remarks will appear on the registration form
 reset=Reset
 save.error=Error updating data. Check if all values are valid
 save.success=Data saved
