Update default Maven goal to `spring-boot:test-run` in pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -176,7 +176,7 @@
     </dependencies>
 
     <build>
-        <defaultGoal>spring-boot:run</defaultGoal>
+        <defaultGoal>spring-boot:test-run</defaultGoal>
         <plugins>
             <plugin>
                 <groupId>org.testcontainers</groupId>
