Refactor views to use generic EditView and improve i18n support

--- a/src/main/resources/vaadin-i18n/translations.properties
+++ b/src/main/resources/vaadin-i18n/translations.properties
@@ -1,24 +1,21 @@
+
 active=active
 application.title=Registration Tool
 back=Back
 cancel=Cancel
-create.mailing=Create mailing
 create.mailing.confirm=Do you want to create the mailing?
 create.mailing.error=Mailing exists
 create.mailing.success=Mailing created
+create.mailing=Create mailing
 date.of.birth=Date of birth
-delete.event.error=The event is still in use and cannot be deleted
-delete.event.question=Do you really want to delete the event?
-delete.event.success=The event has been deleted
-delete.event=Delete event
-delete.person.error=The person is still in use and cannot be deleted
-delete.person.question=Do you really want to delete the person?
-delete.person.success=The person has been deleted
-delete.person=Delete person
+delete.record.error=The record is still in use and cannot be deleted
+delete.record.question=Do you really want to delete the record?
+delete.record.success=The record has been deleted
+delete.record=Delete record
 description=Description
-email=Email
-email.text=Email text (don't forget %s)
 email.text.placeholder=Enter email text here. Must contain %s for the link to the registration form.
+email.text=Email text (don't forget %s)
+email=Email
 emails.sent=Emails sent
 event.registrations=Registration
 events=Events
@@ -33,13 +30,13 @@ open.from=Open from
 open.until=Open to
 participates=participates
 persons=Persons
+register=Register
 registration.for=Registration for
 registration.form=Registration form
-registrations=Registrations
-register=Register
 registration.success=Thanks for registering!
-remarks=Remarks
+registrations=Registrations
 remarks.placeholder=Remarks will appear on the registration form
+remarks=Remarks
 reset=Reset
 save.error=Error updating data. Check if all values are valid
 save.success=Data saved
@@ -49,7 +46,11 @@ select.all.persons=Select all persons
 select.no.events=Select no events
 select.no.persons=Select no persons
 send.emails=Send emails
+send.emails.confirm=Do you want to send the emails?
+send.emails.error=The emails have already been sent
+send.emails.success=Emails sent
 sent=Sent
+show.registrations=Show registrations
 title=Title
 until=until
 year=Year
