Fix German and English translations for save notifications and improve binding consistency

--- a/src/main/resources/vaadin-i18n/translations.properties
+++ b/src/main/resources/vaadin-i18n/translations.properties
@@ -1,4 +1,3 @@
-
 active=active
 application.title=Registration Tool
 back=Back
@@ -38,8 +37,8 @@ registrations=Registrations
 remarks.placeholder=Remarks will appear on the registration form
 remarks=Remarks
 reset=Reset
-save.error=Error updating data. Check if all values are valid
-save.success=Data saved
+save.error=The record couldn't be saved
+save.success=The record was saved
 save=Save
 select.all.events=Select all events
 select.all.persons=Select all persons
