--- a/src/main/resources/vaadin-i18n/translations.properties
+++ b/src/main/resources/vaadin-i18n/translations.properties
@@ -30,6 +30,7 @@ open.until=Open to
 participates=participates
 persons=Persons
 register=Register
+registration=Registration
 registration.for=Registration for
 registration.form=Registration form
 registration.success=Thanks for registering!
