#9 Update registration flow to support edit functionality and improve UI consistency

--- a/src/main/resources/vaadin-i18n/translations.properties
+++ b/src/main/resources/vaadin-i18n/translations.properties
@@ -34,6 +34,7 @@ registration=Registration
 registration.for=Registration for
 registration.form=Registration form
 registration.success=Thanks for registering!
+registration.updated=Registration updated
 registrations=Registrations
 remarks.placeholder=Remarks will appear on the registration form
 remarks=Remarks
@@ -53,5 +54,6 @@ sent=Sent
 show.registrations=Show registrations
 title=Title
 until=until
+update.registration=Update registration
 year=Year
 yes=Yes
