#8 Add footer totals to grid and implement registration count per event
Signed-off-by: Simon Martinelli <simon@martinelli.ch>

--- a/src/main/resources/vaadin-i18n/translations.properties
+++ b/src/main/resources/vaadin-i18n/translations.properties
@@ -53,6 +53,7 @@ send.emails.success=Emails sent
 sent=Sent
 show.registrations=Show registrations
 title=Title
+total=Total
 until=until
 update.registration=Update registration
 year=Year
