Update UI for invitations, adjust layout, and improve translations
Signed-off-by: Simon Martinelli <simon@martinelli.ch>

--- a/src/main/resources/vaadin-i18n/translations.properties
+++ b/src/main/resources/vaadin-i18n/translations.properties
@@ -36,6 +36,8 @@ registration.form=Registration form
 registration.success=Thanks for registering!
 registration.updated=Registration updated
 registrations=Registrations
+invitations=Invitations
+invitation=Invitation
 remarks.placeholder=Remarks will appear on the registration form
 remarks=Remarks
 reset=Reset
