#11 Refactor UI components and improve role-based access control.
Replaced `Button` with a custom `Icon` component for better consistency across UI elements. Updated access roles from `ADMIN` to `USER` for multiple views to align with revised security policies. Improved email generation logic and addressed existing database queries with optimizations.

Signed-off-by: Simon Martinelli <simon@martinelli.ch>

--- a/src/main/resources/vaadin-i18n/translations.properties
+++ b/src/main/resources/vaadin-i18n/translations.properties
@@ -25,6 +25,7 @@ link=Link
 location=Location
 mailing.created=Mailing created
 mailing=Mailing
+no.registrations=No registrations
 open.from=Open from
 open.until=Open to
 participates=participates
@@ -57,6 +58,7 @@ show.registrations=Show registrations
 title=Title
 total=Total
 until=until
+update.mailing=Update mailing
 update.registration=Update registration
 year=Year
 yes=Yes
