Update translations and adjust grid column display
Signed-off-by: Simon Martinelli <simon@martinelli.ch>

--- a/src/main/resources/vaadin-i18n/translations.properties
+++ b/src/main/resources/vaadin-i18n/translations.properties
@@ -25,7 +25,8 @@ link=Link
 location=Location
 mailing.created=Mailing created
 mailing=Mailing
-no.registrations=No registrations
+no.mailings=No mailings found
+no.registrations=No registrations found
 open.from=Open from
 open.until=Open to
 participates=participates
@@ -33,7 +34,7 @@ persons=Persons
 register=Register
 registration=Registration
 registration.for=Registration for
-registration.form=Registration form
+registration.form=Show registration form
 registration.success=Thanks for registering!
 registration.updated=Registration updated
 registrations=Registrations
