Refactor email sending logic and enhance UI translations.
Replaced synchronous email sending with asynchronous logic using `@Async` for better performance. Refactored the email-sending functionality into `EmailSender`, adding necessary validation and error handling. Updated i18n translations and UI components to improve clarity and user experience.

Signed-off-by: Simon Martinelli <simon@martinelli.ch>

--- a/src/main/resources/vaadin-i18n/translations.properties
+++ b/src/main/resources/vaadin-i18n/translations.properties
@@ -52,10 +52,10 @@ select.no.events=Select no events
 select.no.persons=Select no persons
 send.emails=Send emails
 send.emails.confirm=Do you want to send the emails?
-send.emails.error=The emails have already been sent
-send.emails.success=Emails sent
+send.emails.success=Emails will be sent
 sent=Sent
 show.registrations=Show registrations
+show.mailings=Show mailings
 title=Title
 total=Total
 until=until
