Add tracking for registration email timestamp
Signed-off-by: Simon Martinelli <simon@martinelli.ch>

--- a/src/main/resources/vaadin-i18n/translations.properties
+++ b/src/main/resources/vaadin-i18n/translations.properties
@@ -32,6 +32,7 @@ open.until=Open to
 participates=participates
 persons=Persons
 register=Register
+registered.at=Registered at
 registration=Registration
 registration.for=Registration for
 registration.form=Show registration form
