Add Excel export functionality for event registrations
Introduced the ability to export event registration data to an Excel file. Integrated a new service using Apache POI for generating the Excel sheets and updated the UI to include an export button. Added necessary translations and dependencies to support this feature.

Signed-off-by: Simon Martinelli <simon@martinelli.ch>

--- a/src/main/resources/vaadin-i18n/translations.properties
+++ b/src/main/resources/vaadin-i18n/translations.properties
@@ -18,6 +18,7 @@ email=Email
 emails.sent=Emails sent
 event.registrations=Registration
 events=Events
+export=Export
 first.name=First name
 from=from
 last.name=Last name
