--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,11 @@
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>5.4.0</version>
+        </dependency>
 
         <dependency>
             <groupId>org.parttio</groupId>
