Refactor code to improve formatting consistency using the spring-javaformat plugin
Signed-off-by: Simon Martinelli <simon@martinelli.ch>

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <testcontainers-jooq-codegen-maven-plugin.version>0.0.4</testcontainers-jooq-codegen-maven-plugin.version>
         <mailcatcher.version>0.9.3</mailcatcher.version>
 
+        <spring-javaformat-maven-plugin.version>0.0.43</spring-javaformat-maven-plugin.version>
         <jacoco.version>0.8.12</jacoco.version>
         <karibu-testing.version>2.2.0</karibu-testing.version>
 
@@ -250,6 +251,20 @@
                     <execution>
                         <goals>
                             <goal>prepare-frontend</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>io.spring.javaformat</groupId>
+                <artifactId>spring-javaformat-maven-plugin</artifactId>
+                <version>${spring-javaformat-maven-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <phase>validate</phase>
+                        <inherited>true</inherited>
+                        <goals>
+                            <goal>validate</goal>
                         </goals>
                     </execution>
                 </executions>
