Update security integration with Azure AD and role mapping
Signed-off-by: Simon Martinelli <simon@martinelli.ch>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,10 @@ spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-jwt.auth.secret=kLzSHBsrDny8EIrsdbX7M0NKcdVD1IjXPPAk9yp5xb8=
+spring.cloud.azure.active-directory.enabled=true
+spring.cloud.azure.active-directory.profile.tenant-id=x
+spring.cloud.azure.active-directory.credential.client-id=x
+spring.cloud.azure.active-directory.credential.client-secret=x
 
 public.address=https://tve-registration.fly.dev
 registration.title=Jugi TV Erlach - Anmeldung
