--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,29 @@
     <artifactId>registrations</artifactId>
     <version>1.9.5-SNAPSHOT</version>
 
+    <name>Registrations</name>
+    <description>Simple Event Registration App</description>
+
+    <organization>
+        <name>Martinelli LLC</name>
+        <url>https://martinelli.ch</url>
+    </organization>
+
+    <developers>
+        <developer>
+            <name>Simon Martinelli</name>
+            <email>simon@martinelli.ch</email>
+            <organization>Martinelli LLC</organization>
+            <organizationUrl>https://martinelli.ch</organizationUrl>
+            <timezone>Europe/Zurich</timezone>
+            <roles>
+                <role>Project Lead</role>
+                <role>Architect</role>
+                <role>Developer</role>
+            </roles>
+        </developer>
+    </developers>
+
     <properties>
         <java.version>21</java.version>
         <vaadin.version>24.6.3</vaadin.version>
