Switch to Maven Wrapper in GitHub workflows
Replaced direct `mvn` commands with `./mvnw` in release and CI workflows. This ensures consistent Maven versions across environments and avoids reliance on pre-installed Maven setups.

Signed-off-by: Simon Martinelli <simon@martinelli.ch>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,6 @@ jobs:
                         ${{ runner.os }}-maven-
 
             -   name: Maven Build, Test, and Sonar
-                run: mvn -B verify sonar:sonar -Pcoverage -Dsonar.projectKey=martinellich_registration
+                run: ./mvnw -B verify sonar:sonar -Pcoverage -Dsonar.projectKey=martinellich_registration
                 env:
                     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
