--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,7 @@ jobs:
                         ${{ runner.os }}-maven-
 
             -   name: Maven Build
-                run: mvn -B clean package -Pproduction
+                run: ./mvnw -B clean package -Pproduction
 
             -   uses: superfly/flyctl-actions/setup-flyctl@master
 
