--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>ch.martinelli.oss</groupId>
     <artifactId>registrations</artifactId>
-    <version>1.9.6</version>
+    <version>1.9.7-SNAPSHOT</version>
 
     <name>Registrations</name>
     <description>Simple Event Registration App</description>
