Make message less confusing
Signed-off-by: Simon Martinelli <simon@martinelli.ch>

--- a/src/main/resources/vaadin-i18n/translations.properties
+++ b/src/main/resources/vaadin-i18n/translations.properties
@@ -36,9 +36,9 @@ register=Register
 registered.at=Registered at
 registration=Registration
 registration.for=Registration for
-registration.form=Show registration form
-registration.success=Thanks for registering!
-registration.updated=Registration updated
+registration.form=Show the registration form
+registration.success=Thank you for the response!
+registration.updated=Response updated
 registrations=Registrations
 invitations=Invitations
 invitation=Invitation
