--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,11 @@ jobs:
                     java-version: '21'
                     distribution: 'adopt'
 
+            -   name: Maven settings.xml
+                uses: s4u/maven-settings-action@v3.1.0
+                with:
+                    properties: '[{"jelastic.username": "${{ secrets.JELASTIC_USERNAME }}"}, {"jelastic.password": "${{ secrets.JELASTIC_TOKEN }}" }]'
+
             -   name: Cache local Maven repository
                 uses: actions/cache@v4
                 with:
@@ -33,11 +38,5 @@ jobs:
             -   name: Maven Build
                 run: ./mvnw -B clean package -Pproduction
 
-            -   uses: superfly/flyctl-actions/setup-flyctl@master
-
-            -   name: Fly Deploy
-                run: flyctl deploy --remote-only
-                env:
-                    FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-
-
+            -   name: Jelastic Deploy
+                run: ./mvnw -B jelastic:deploy
