--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,5 +25,5 @@ spring.cloud.azure.active-directory.profile.tenant-id=x
 spring.cloud.azure.active-directory.credential.client-id=x
 spring.cloud.azure.active-directory.credential.client-secret=x
 
-public.address=https://tve-registration.fly.dev
-registration.title=Jugi TV Erlach - Anmeldung
+public.address=https://anmeldungen.tverlach.ch
+registration.title=Jugi TV Erlach - Anmeldungen
