Remove superfluous test. Use singular
Signed-off-by: Simon Martinelli <simon@martinelli.ch>

--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,10 @@
     </parent>
 
     <groupId>ch.martinelli.oss</groupId>
-    <artifactId>registrations</artifactId>
+    <artifactId>registration</artifactId>
     <version>1.9.13-SNAPSHOT</version>
 
-    <name>Registrations</name>
+    <name>registration</name>
     <description>Simple Event Registration App</description>
 
     <organization>
