Use prefix on properties
Signed-off-by: Simon Martinelli <simon@martinelli.ch>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,10 +9,6 @@ vaadin.launch-browser=true
 # For more information https://vaadin.com/docs/latest/integrations/spring/configuration#special-configuration-parameters
 vaadin.allowed-packages=com.vaadin,org.vaadin,ch.martinelli.oss
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=always
-
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=
@@ -25,5 +21,5 @@ spring.cloud.azure.active-directory.profile.tenant-id=x
 spring.cloud.azure.active-directory.credential.client-id=x
 spring.cloud.azure.active-directory.credential.client-secret=x
 
-public.address=https://anmeldungen.tverlach.ch
+registration.public.address=https://anmeldungen.tverlach.ch
 registration.title=Jugi TV Erlach - Anmeldungen
