Update SecurityConfiguration and enable debug logging for Spring Security/OAuth2
Signed-off-by: Simon Martinelli <simon@martinelli.ch>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,6 @@ spring.cloud.azure.active-directory.credential.client-secret=x
 
 registration.public.address=https://anmeldungen.tverlach.ch
 registration.title=Jugi TV Erlach - Anmeldungen
+
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security.oauth2=DEBUG
