--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=registration
 spring.application.version=@project.version@
 
 server.port=${PORT:8080}
+server.forward-headers-strategy=framework
 
 # Launch the default browser when starting the application in development mode
 vaadin.launch-browser=true
@@ -23,6 +24,3 @@ spring.cloud.azure.active-directory.credential.client-secret=x
 
 registration.public.address=https://anmeldungen.tverlach.ch
 registration.title=Jugi TV Erlach - Anmeldungen
-
-logging.level.org.springframework.security=DEBUG
-logging.level.org.springframework.security.oauth2=DEBUG
