Update `application.properties` to set `server.tomcat.redirect-context-root`
Signed-off-by: Simon Martinelli <simon@martinelli.ch>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.application.version=@project.version@
 
 server.port=${PORT:8080}
 server.forward-headers-strategy=framework
+server.tomcat.redirect-context-root=false
 
 # Launch the default browser when starting the application in development mode
 vaadin.launch-browser=true
