--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,5 @@ spring.cloud.azure.active-directory.credential.client-secret=x
 
 registration.public.address=https://anmeldungen.tverlach.ch
 registration.title=Jugi TV Erlach - Anmeldungen
+
+logging.level.org.springframework.security=debug
