--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.application.version=@project.version@
 
 server.port=${PORT:8080}
 server.forward-headers-strategy=framework
+server.servlet.session.cookie.same-site=none
+server.servlet.session.cookie.secure=true
 server.tomcat.redirect-context-root=false
 
 # Launch the default browser when starting the application in development mode
