--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>ch.martinelli.oss</groupId>
     <artifactId>registration</artifactId>
-    <version>1.10.12</version>
+    <version>1.10.13-SNAPSHOT</version>
 
     <name>registration</name>
     <description>Simple Event Registration App</description>
