Update `application.properties` to adjust Spring Security logging level to TRACE
Signed-off-by: Simon Martinelli <simon@martinelli.ch>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,4 +25,4 @@ spring.cloud.azure.active-directory.credential.client-secret=x
 registration.public.address=https://anmeldungen.tverlach.ch
 registration.title=Jugi TV Erlach - Anmeldungen
 
-logging.level.org.springframework.security=debug
+logging.level.org.springframework.security=trace
