--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,8 @@
         <spring-javaformat-maven-plugin.version>0.0.47</spring-javaformat-maven-plugin.version>
         <jacoco.version>0.8.14</jacoco.version>
         <karibu-testing.version>2.5.0</karibu-testing.version>
+        <pitest-maven.version>1.21.0</pitest-maven.version>
+        <pitest-junit5-plugin.version>1.2.2</pitest-junit5-plugin.version>
 
         <gitflow.version>1.21.0</gitflow.version>
 
@@ -341,6 +343,18 @@
                     <environment>registration</environment>
                     <api_hoster>app.hidora.com</api_hoster>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.pitest</groupId>
+                <artifactId>pitest-maven</artifactId>
+                <version>${pitest-maven.version}</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.pitest</groupId>
+                        <artifactId>pitest-junit5-plugin</artifactId>
+                        <version>${pitest-junit5-plugin.version}</version>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
     </build>
