--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,8 @@ jobs:
 
         steps:
             -   uses: actions/checkout@v5
+                with:
+                  fetch-depth: 0
 
             -   name: Set up JDK 21
                 uses: actions/setup-java@v5
